# NCU-SW

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  app.slx  app.slxc  flash-m7.bat  ncu-dbg.py  test.a2l  test.dbc  test.dbf  xcp_tcp_test.m  xcp_udp_test.m
CANape/NCU/: CANape.ini  CANapeTmpMea.ini  CanapeCmd.ini  NCU.cna  NCU.cnaxml  Recorder_2026-04-22_12-40-18.mf4  Recorder_2026-04-22_15-17-16.mf4  RecycleBin.ini  ~CANape_INI.TMP
app/: app.sldd  app.slx  app.slx.autosave  app.slx.original  app_cgxe.mexw64
app/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
app/slprj/ert/app/tmwinternal/: BlockTraceInfo.mat  scv
app_ert_rtw/: CMakeLists.txt  app.c  app.h  app_private.h  app_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rt_defines.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
app_ert_rtw/tmwinternal/: simulink_cache.xml  tr
cmake/: gnu-tools-for-stm32.cmake  vscode_generated.cmake
common/: icc.h
common/lwip/: lwipopts.h
common/lwip/arch/: cc.h
m4/: CMakeLists.txt
m4/sld/: startup_stm32h755xx_cm4.s  stm32h745xi_flash_cm4.ld  stm32h755xi_flash_cm4.ld
m4/src/: main.c
m7/: CMakeLists.txt
m7/sld/: stm32h745xi_flash_cm7.ld  stm32h745xi_ram_cm7.ld  stm32h755xi_flash_cm7.ld  stm32h755xi_ram_cm7.ld
m7/src/: main.c  syscall.c
m7/src/can/: can.c  can.h
m7/src/eth/: eth.c  eth.h  eth_ws.c  http_custom_fs.c
m7/src/sys/: sys.c  sys.h
m7/src/task/: task.c  task.h
m7/src/usb/: tusb_config.h
m7/src/xcp/: xcp.c  xcp.h
m7/web/: index.html  styles.css
ncukit/: ncukit.cmake
ncukit/lib/analog/: analog.c  analog.h
ncukit/lib/can/: can.c  can.h
ncukit/lib/gpio/: gpio.c  gpio.h
ncukit/rtw/: .$can_config.png.bkp  analog_pin.m  can_bitrate.m  can_bus.m  gpio_pin.m  ncu.tlc  ncu_build_hook.m  ncu_make_rtw_hook.m  ncu_project_include.cmake  ncu_register_target.m  ncu_register_toolchain.m  ncu_stf_select_callback.m  ncu_stm32_toolchain.cmake  ncukit.slx  sl_customization.m  slblocks.m
ncukit/rtw/+ncu/: NCUExecutionTool.m
ncukit/rtw/tools/: cmake.cmd
ncukit/sld/: stm32h745xi_flash_cm4.ld  stm32h745xi_ram_cm4.ld  stm32h755xi_flash_cm4.ld  stm32h755xi_ram_cm4.ld
ncukit/src/: main.c
openocd/openocd/scripts/board/: ncu.cfg
resources/project/5q9dSmBp5xmd39KC1ckE5XBiI04/: -CeKOLc0f01Poc0uOCkE6B-wG6Mp.xml  4T7KTEGT-QCEdq1nwQ7hAaAExGYp.xml  RmLHBZDLdLvKtPdAXmIbHVAB7dUp.xml  b4rCzbbPX3eCE4Au29-Tl2aj8qgp.xml  dgxX0DU6tQ-8FKVcIeLGafBa5pMp.xml  tm1GV2Bwsq-ajWT5hL84LtWB6oMp.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: bP3o2z8ItHjdbzzAdF9iMbiO3w4p.xml
resources/project/J-bldkKpQp3X1duOX5xdL1HyLnA/: 6grZC0-sKyUYpd60NBDg9VnZSlEp.xml
resources/project/Jr7oevvkY3S-TUSfTi11XOVZTms/: F0WrboLbJxMqMpNp9DoV3vjDaRkp.xml  ktkiWmnNdmLIeIzmLaFOgsDpgpgp.xml  ll9lE59Y71V-MJl4gSgVjUP1Lvkp.xml
resources/project/O1V1nJav54OlkbsdELyHCRL6jEI/: TVXUdRXRmmJFrIOgWSZHC7T5Zwwp.xml
resources/project/R6m7AxFfSX7StHtVJ9WG44h96GM/: S6H_pzzyvTzKSzPgkEebn1GMQbwp.xml  qetL1yC_6MWw-aLOCXPx9T10_3Mp.xml
resources/project/YZM8o99EMACqus_GAdWkqowHgKM/: PQFBA2z37C4RIDHp1YB7oZV6_p4p.xml  bJFVTR9hfInEpjDZbNgSmSKwqHsp.xml
resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: AiiKvaFmHiDvbxBcCV1YIrDbk1Qp.xml  HZKj7xf8zw-PRFtbiKDQsg2Nhn8p.xml  Jr7oevvkY3S-TUSfTi11XOVZTmsp.xml  _0Vx3QxI2-_r_d_c6byCHtnge1Ep.xml  jAnfCIduyNZswfh3vvvHKjKQkMMp.xml
slprj/ert/_sharedutils/: shared_file.dmr
slprj/ert/app/tmwinternal/: CompileInfo.xml  binfo.mat  minfo.mat
src/: main.c  startup_stm32h755xx_CM7.S
src/common/: lwipopts.h
src/m7/: main.c  stm32h755xi_flash_cm7.ld  syscall.c
src/m7/lwip_port/include/: ethernetif.h
src/m7/lwip_port/include/arch/: cc.h
src/m7/uart/: uart.c  uart.h
